<resources>
    <string name="app_name">WorkAudIo</string>
    <string name="delete_selected_track">Delete track</string>
    <string name="delete_selected_workout">Delete workout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="workout_duration">workout_duration</string>
    <string name="reset_time">00:00:00</string>
    <string name="reset_song_time">00:00</string>
    <string name="default_duration">30 min</string>
    <string name="edit_name">Change the Workout Name</string>
    <string name="ok">Ok</string>
    <string name="minutes"> min</string>
    <string name="edit_duration">Set the Workout Duration</string>
    <string name="added_to_playlist"> added to playlist</string>
    <string name="description">description</string>
    <string name="edit">Edit</string>
    <string name="snackbar_duration_info">Add enough tracks to match at least the target duration of </string>
    <string name="snackbar_duration_info_second">in order to start the player</string>
    <string name="scopes">user-read-recently-played,user-library-modify,user-read-email,user-read-private</string>
    <string name="callback">http://10.0.2.2:8090/callback</string>
    <string name="client_id">522adc8dc0d643bea4200d7e3721dbc5</string>
    <string name="login_pref">login_pref</string>
    <string name="player_timer">player_timer</string>
    <string name="song_timer">song_timer</string>
    <string name="song_duration">song_duration</string>
    <string name="workout_name">workout_name</string>
    <string name="song_name">song_name</string>
    <string name="song_artist">song_artist</string>
    <string name="workout_id">workout_id</string>
    <string name="progress_bar_value">progress_bar_value</string>
    <string name="current_song">current_song</string>
    <string name="standard_search">Search</string>
    <string name="premium_spotify">A premium Spotify Account is required to run this app</string>
    <string name="login_with_spotify">LOGIN WITH SPOTIFY</string>
    <string name="login_automatically">Login automatically and don\'t show anymore</string>
    <string name="title_track">Title</string>
    <string name="artist_track">Artist</string>
    <string name="image_description">image_description</string>
    <string name="cancel">CANCEL</string>
    <string name="set_duration">Set duration:</string>
    <string name="standard_duration">30 min</string>
    <string name="enter_a_new_name">Enter a new name</string>
    <string name="stop_the_workout">Stop the workout?</string>
    <string name="create_workout">CREATE WORKOUT</string>
    <string name="standard_workout_time">20</string>
    <string name="standard_duration2">/30 min</string>
    <string name="enter_a_name">Enter a name:</string>
    <string name="continue_message">CONTINUE</string>
    <string name="add_tracks">Add Tracks</string>
    <string name="thirty">30</string>
    <string name="play">play</string>
    <string name="content">content</string>
    <string name="artist">Artist</string>
    <string name="name">name</string>
    <string name="duration">duration</string>
    <string name="duration_info">30 min, 20 songs</string>
    <string name="delete">Delete</string>
    <string name="search_track">Search Track</string>
    <string name="searchview_src">android:id/search_src_text</string>
    <string name="genres">Genres</string>
    <string name="workouts">Workouts</string>
</resources>